# lagoinha-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README-pt.md  README.md
.github/assets/: lagoinha-calls.drawio
.github/workflows/: ci.yaml
examples/: get_address.rs  get_address_tokio.rs  standalone_services.rs  viacep.rs
src/: error.rs  lib.rs
src/services/: cepla.rs  correios.rs  mod.rs  viacep.rs
