[package]
name = "lagoinha"
version = "0.1.0"
authors = ["Auyer <rafael@rcpassos.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.4"
bytes = "0.5"
curl = { version ="0.4", default-features = false, features = ["static-curl"]}
futures = "0.3"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }